--- a/.github/workflows/pythonpackage.yml
+++ b/.github/workflows/pythonpackage.yml
@@ -38,6 +38,7 @@ jobs:
     - name: Test with pytest
       run: |
         pip install pytest
+        pip install pytest-cov
         pytest --cov=. --cov-report xml
     - name: Upload coverage to Codecov  
       uses: codecov/codecov-action@v1
