--- a/.github/workflows/pythonpackage.yml
+++ b/.github/workflows/pythonpackage.yml
@@ -33,4 +33,6 @@ jobs:
         pip install pytest-cov
         pytest --cov=./ --cov-report=xml
     - name: Codecov
-      uses: codecov/codecov-action@v1.0.4
+      run: |
+        pip install codecov
+        codecov -f coverage.xml
