--- a/.github/workflows/pythonpackage.yml
+++ b/.github/workflows/pythonpackage.yml
@@ -35,4 +35,4 @@ jobs:
     - name: Codecov
       run: |
         pip install codecov
-        codecov -f coverage.xml
+        codecov -f coverage.xml -t ${{ secrets.CODECOV_TOKEN }}
