--- a/.github/workflows/pythonpackage.yml
+++ b/.github/workflows/pythonpackage.yml
@@ -32,6 +32,9 @@ jobs:
         pip install pytest
         pip install pytest-cov
         pytest --cov=./ --cov-report=xml
+    - name: Find coverages
+      run: |
+        find . -name *.xml
     - name: Codecov
       run: |
         pip install codecov
