--- a/.github/workflows/pythonpackage.yml
+++ b/.github/workflows/pythonpackage.yml
@@ -33,6 +33,6 @@ jobs:
         pip install pytest-cov
         pip install codecov
         pytest --cov=./ --cov-report=xml
-        find . -name *.xml
+        find
         codecov -f coverage.xml -t ${{ secrets.CODECOV_TOKEN }}
       
