--- a/.github/workflows/pythonpackage.yml
+++ b/.github/workflows/pythonpackage.yml
@@ -30,9 +30,4 @@ jobs:
     - name: Test with pytest
       run: |
         pip install pytest
-        pip install pytest-cov
-        pytest --cov=./ --cov-report=xml
-    - name: Codecov
-      run: |
-        pip install codecov
-        codecov -f coverage.xml
+        pytest
