--- a/appveyor.yml
+++ b/appveyor.yml
@@ -12,8 +12,8 @@ install:
 build: off
 
 test_script:
-  - %PYTHON%\\Scripts\\prospector.exe
-  - %PYTHON%\\Scripts\\pytest.exe --cov=./ --cov-report=xml
+  - "%PYTHON%\\Scripts\\prospector.exe"
+  - "%PYTHON%\\Scripts\\pytest.exe --cov=./ --cov-report=xml"
 
 on_success:
-  - %PYTHON%\\Scripts\\codecov.exe
+  - "%PYTHON%\\Scripts\\codecov.exe"
