--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,7 @@ install:
   - pip install codecov
   - pip install -r requirements.txt
 script:
+  - prospector
   - pytest --cov=./ --cov-report=xml
 after_success:
   - codecov
