--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ install:
   - pip install pytest
   - pip install pytest-cov
   - pip install requests
-  - pip install prospector
+  - pip install prospector==1.2.0
   - pip install codecov
   - pip install -r requirements.txt
 script:
