--- a/appveyor.yml
+++ b/appveyor.yml
@@ -5,7 +5,7 @@ environment:
 install:
   - "%PYTHON%\\python.exe -m pip install pytest"
   - "%PYTHON%\\python.exe -m pip install pytest-cov"
-  - "%PYTHON%\\python.exe -m pip install prospector"
+  - "%PYTHON%\\python.exe -m pip install prospector==1.2.0"
   - "%PYTHON%\\python.exe -m pip install codecov"
   - "%PYTHON%\\python.exe -m pip install -r requirements.txt"
 
